fix err of Makefile

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,4 +1,4 @@
 FROM scratch
 
-COPY ../bin/tag-disks-for-ecs /
-ENTRYPOINT ["/tag-disks-for-ecs"]
+COPY ./bin/tags-for-ecs /
+ENTRYPOINT ["/tags-for-ecs"]
